--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -236,7 +236,8 @@
   margin: 0;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
 }
 
 .nav-submenu.show {
